# gothic-zoologist

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  png_to_jpg.sh  pyproject.toml
.checkpoints/single_save/: _CHECKPOINT_METADATA  _METADATA  _sharding  _strings.json  manifest.ocdbt
.checkpoints/single_save/ocdbt.process_0/: manifest.ocdbt
dataspell/: 02-gradient-descent.ipynb  03-backpropagation.ipynb  04-relu.ipynb
gothic_zoologist/: CIFAR_10.ipynb  __main__.py  dataset.py  model.py  train.py
notebooks/: 01-basic.ipynb  05-multiple-io.ipynb  CIFAR_10.ipynb
