[tool.poetry]
name = "gothic-zoologist"
version = "0.1.0"
description = ""
authors = ["Dominik Purgał <amonsir29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cpu"], version = "^0.4.38"}
flax = "^0.10.2"
scikit-learn = "^1.6.0"
tensorflow = "^2.18.0"
orbax-checkpoint = "^0.10.3"
notebook = "^7.3.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
