[tool.poetry]
name = "gothic-zoologist"
version = "0.1.0"
description = ""
authors = ["Dominik Purgał <amonsir29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cpu"], version = "^0.4.38"}
flax = "^0.10.2"
orbax-checkpoint = "^0.10.3"
dm-pix = "^0.4.3"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
